Completed the intial version

--- a/EmployeeApp/Views/Home/EmployeeSalaryView.cshtml
+++ b/EmployeeApp/Views/Home/EmployeeSalaryView.cshtml
@@ -104,7 +104,7 @@
         </div>
 
         <div class="netpay-box text-center">
-            <h4><i class="fa-solid fa-sack-dollar"></i> Total Net Payable: ₹ 450001</h4>
+            <h4><i class="fa-solid fa-sack-dollar"></i> Total Net Payable: ₹ @Model.NetSalary</h4>
         </div>
 
     </div>
